# natch

./: .gitignore  .tool-versions  ALL_TYPES.md  DEVNOTES.md  FINE_PLAN.md  README.md  docker-compose.yml  mix.exs
.claude/: settings.local.json
.github/workflows/: precompile.yml  test.yml
examples/: basic_usage.exs
lib/: chex.ex
lib/chex/: application.ex  block.ex  column.ex  connection.ex  conversion.ex  error.ex  insert.ex  native.ex  stream.ex
lib/natch/: column.ex
native/chex_fine/: CMakeLists.txt  Makefile
native/chex_fine/src/: block.cpp  column.cpp  error_encoding.h  minimal.cpp  select.cpp
test/: array_integration_test.exs  block_test.exs  chex_test.exs  column_test.exs  error_connection_test.exs  minimal_poc_test.exs  phase1_foundation_test.exs  phase2_type_system_test.exs  phase3_block_insert_test.exs  phase4_select_test.exs  test_helper.exs  timeout_integration_test.exs  tuple_append_bulk_test.exs  tuple_integration_test.exs
